<?xml version="1.0"?>
<package format="2">
  <name>anynode_standalone_example</name>
  <version>0.2.0</version>
  <description>The anynode_standalone_example package</description>
  <maintainer email="preisigj@ethz.ch">Dario Bellicoso</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>any_node</depend>
  <depend>ethercat_device_configurator</depend>

</package>
